--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -38,7 +38,8 @@ spec:
                 - ALL
             readOnlyRootFilesystem: true
             runAsNonRoot: true
-            runAsUser: 65536
+            runAsUser: 65534
+            runAsGroup: 65534
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
